y.output
   0  $accept : input $end

   1  input :
   2        | auxsuite

   3  fi : NEWLINE
   4     | stmt
   5     | fi stmt

   6  suite : simple
   7        | NEWLINE INDENT auxsuite DEDENT

   8  auxsuite : stmt
   9           | auxsuite stmt

  10  stmt : simple
  11       | compound_stmt

  12  compound_stmt : if_stmt
  13                | while_stmt

  14  if_stmt : IF test DOBLEPUNTO suite
  15          | IF test DOBLEPUNTO suite auxif

  16  auxif : ELIF test DOBLEPUNTO suite
  17        | auxif ELIF test DOBLEPUNTO suite

  18  while_stmt : WHILE test DOBLEPUNTO suite

  19  simple : auxsimple PUNTOCOMA NEWLINE
  20         | auxsimple NEWLINE

  21  auxsimple : small_stmt
  22            | auxsimple PUNTOCOMA small_stmt

  23  small_stmt : expr_stmt
  24             | print_stmt

  25  expr_stmt : test
  26            | test EQ test

  27  print_stmt : PRINT
  28             | PRINT auxprint
  29             | PRINT ">>" auxprint

  30  auxprint : test
  31           | auxprint COMA test

  32  test : or_test

  33  or_test : and_test
  34          | or_test OR and_test

  35  and_test : not_test
  36           | and_test AND not_test

  37  not_test : NOT not_test
  38           | comparison

  39  comparison : expr
  40             | expr LE comparison
  41             | expr GR comparison
  42             | expr EQUALS comparison
  43             | expr GRQ comparison
  44             | expr LEQ comparison
  45             | expr DIFF comparison
  46             | expr IN comparison
  47             | expr NOTIN comparison
  48             | expr IS comparison
  49             | expr ISNOT comparison

  50  expr : xor_expr
  51       | expr ORB xor_expr

  52  xor_expr : and_expr
  53           | xor_expr XOR and_expr

  54  and_expr : arith_expr
  55           | and_expr ANDB arith_expr

  56  arith_expr : term
  57             | term MAS arith_expr
  58             | term MENOS arith_expr

  59  term : factor
  60       | factor POR term
  61       | factor DIV term
  62       | factor MODULO term
  63       | factor DIVENTERA term

  64  factor : MAS factor
  65         | MENOS factor
  66         | power

  67  power : atom
  68        | atom POTENCIA factor

  69  atom : CADENA
  70       | ENTERO
  71       | REAL
  72       | IDENTIFIER

state 0
	$accept : . input $end  (0)
	input : .  (1)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	WHILE  shift 6
	IF  shift 7
	PRINT  shift 8
	MAS  shift 9
	MENOS  shift 10
	$end  reduce 1

	input  goto 11
	auxsuite  goto 12
	stmt  goto 13
	simple  goto 14
	compound_stmt  goto 15
	if_stmt  goto 16
	while_stmt  goto 17
	test  goto 18
	auxsimple  goto 19
	small_stmt  goto 20
	expr_stmt  goto 21
	print_stmt  goto 22
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 1
	atom : CADENA .  (69)

	.  reduce 69


state 2
	atom : IDENTIFIER .  (72)

	.  reduce 72


state 3
	atom : ENTERO .  (70)

	.  reduce 70


state 4
	atom : REAL .  (71)

	.  reduce 71


state 5
	not_test : NOT . not_test  (37)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	not_test  goto 35
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 6
	while_stmt : WHILE . test DOBLEPUNTO suite  (18)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	test  goto 36
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 7
	if_stmt : IF . test DOBLEPUNTO suite  (14)
	if_stmt : IF . test DOBLEPUNTO suite auxif  (15)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	test  goto 37
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 8
	print_stmt : PRINT .  (27)
	print_stmt : PRINT . auxprint  (28)
	print_stmt : PRINT . ">>" auxprint  (29)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	">>"  shift 38
	NEWLINE  reduce 27
	PUNTOCOMA  reduce 27

	test  goto 39
	auxprint  goto 40
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 9
	factor : MAS . factor  (64)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	factor  goto 41
	power  goto 33
	atom  goto 34


state 10
	factor : MENOS . factor  (65)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	factor  goto 42
	power  goto 33
	atom  goto 34


state 11
	$accept : input . $end  (0)

	$end  accept


state 12
	input : auxsuite .  (2)
	auxsuite : auxsuite . stmt  (9)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	WHILE  shift 6
	IF  shift 7
	PRINT  shift 8
	MAS  shift 9
	MENOS  shift 10
	$end  reduce 2

	stmt  goto 43
	simple  goto 14
	compound_stmt  goto 15
	if_stmt  goto 16
	while_stmt  goto 17
	test  goto 18
	auxsimple  goto 19
	small_stmt  goto 20
	expr_stmt  goto 21
	print_stmt  goto 22
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 13
	auxsuite : stmt .  (8)

	.  reduce 8


state 14
	stmt : simple .  (10)

	.  reduce 10


state 15
	stmt : compound_stmt .  (11)

	.  reduce 11


state 16
	compound_stmt : if_stmt .  (12)

	.  reduce 12


state 17
	compound_stmt : while_stmt .  (13)

	.  reduce 13


state 18
	expr_stmt : test .  (25)
	expr_stmt : test . EQ test  (26)

	EQ  shift 44
	NEWLINE  reduce 25
	PUNTOCOMA  reduce 25


state 19
	simple : auxsimple . PUNTOCOMA NEWLINE  (19)
	simple : auxsimple . NEWLINE  (20)
	auxsimple : auxsimple . PUNTOCOMA small_stmt  (22)

	NEWLINE  shift 45
	PUNTOCOMA  shift 46
	.  error


state 20
	auxsimple : small_stmt .  (21)

	.  reduce 21


state 21
	small_stmt : expr_stmt .  (23)

	.  reduce 23


state 22
	small_stmt : print_stmt .  (24)

	.  reduce 24


state 23
	test : or_test .  (32)
	or_test : or_test . OR and_test  (34)

	OR  shift 47
	COMA  reduce 32
	NEWLINE  reduce 32
	EQ  reduce 32
	DOBLEPUNTO  reduce 32
	PUNTOCOMA  reduce 32


state 24
	or_test : and_test .  (33)
	and_test : and_test . AND not_test  (36)

	AND  shift 48
	COMA  reduce 33
	NEWLINE  reduce 33
	OR  reduce 33
	EQ  reduce 33
	DOBLEPUNTO  reduce 33
	PUNTOCOMA  reduce 33


state 25
	and_test : not_test .  (35)

	.  reduce 35


state 26
	not_test : comparison .  (38)

	.  reduce 38


state 27
	comparison : expr .  (39)
	comparison : expr . LE comparison  (40)
	comparison : expr . GR comparison  (41)
	comparison : expr . EQUALS comparison  (42)
	comparison : expr . GRQ comparison  (43)
	comparison : expr . LEQ comparison  (44)
	comparison : expr . DIFF comparison  (45)
	comparison : expr . IN comparison  (46)
	comparison : expr . NOTIN comparison  (47)
	comparison : expr . IS comparison  (48)
	comparison : expr . ISNOT comparison  (49)
	expr : expr . ORB xor_expr  (51)

	IN  shift 49
	LE  shift 50
	GR  shift 51
	LEQ  shift 52
	GRQ  shift 53
	EQUALS  shift 54
	DIFF  shift 55
	ORB  shift 56
	NOTIN  shift 57
	ISNOT  shift 58
	IS  shift 59
	COMA  reduce 39
	NEWLINE  reduce 39
	AND  reduce 39
	OR  reduce 39
	EQ  reduce 39
	DOBLEPUNTO  reduce 39
	PUNTOCOMA  reduce 39


state 28
	expr : xor_expr .  (50)
	xor_expr : xor_expr . XOR and_expr  (53)

	XOR  shift 60
	COMA  reduce 50
	NEWLINE  reduce 50
	AND  reduce 50
	OR  reduce 50
	IN  reduce 50
	LE  reduce 50
	GR  reduce 50
	LEQ  reduce 50
	GRQ  reduce 50
	EQUALS  reduce 50
	DIFF  reduce 50
	EQ  reduce 50
	ORB  reduce 50
	DOBLEPUNTO  reduce 50
	PUNTOCOMA  reduce 50
	NOTIN  reduce 50
	ISNOT  reduce 50
	IS  reduce 50


state 29
	xor_expr : and_expr .  (52)
	and_expr : and_expr . ANDB arith_expr  (55)

	ANDB  shift 61
	COMA  reduce 52
	NEWLINE  reduce 52
	AND  reduce 52
	OR  reduce 52
	IN  reduce 52
	LE  reduce 52
	GR  reduce 52
	LEQ  reduce 52
	GRQ  reduce 52
	EQUALS  reduce 52
	DIFF  reduce 52
	EQ  reduce 52
	XOR  reduce 52
	ORB  reduce 52
	DOBLEPUNTO  reduce 52
	PUNTOCOMA  reduce 52
	NOTIN  reduce 52
	ISNOT  reduce 52
	IS  reduce 52


state 30
	and_expr : arith_expr .  (54)

	.  reduce 54


state 31
	arith_expr : term .  (56)
	arith_expr : term . MAS arith_expr  (57)
	arith_expr : term . MENOS arith_expr  (58)

	MAS  shift 62
	MENOS  shift 63
	COMA  reduce 56
	NEWLINE  reduce 56
	AND  reduce 56
	OR  reduce 56
	IN  reduce 56
	LE  reduce 56
	GR  reduce 56
	LEQ  reduce 56
	GRQ  reduce 56
	EQUALS  reduce 56
	DIFF  reduce 56
	EQ  reduce 56
	XOR  reduce 56
	ANDB  reduce 56
	ORB  reduce 56
	DOBLEPUNTO  reduce 56
	PUNTOCOMA  reduce 56
	NOTIN  reduce 56
	ISNOT  reduce 56
	IS  reduce 56


state 32
	term : factor .  (59)
	term : factor . POR term  (60)
	term : factor . DIV term  (61)
	term : factor . MODULO term  (62)
	term : factor . DIVENTERA term  (63)

	POR  shift 64
	DIV  shift 65
	DIVENTERA  shift 66
	MODULO  shift 67
	COMA  reduce 59
	NEWLINE  reduce 59
	AND  reduce 59
	OR  reduce 59
	IN  reduce 59
	MAS  reduce 59
	MENOS  reduce 59
	LE  reduce 59
	GR  reduce 59
	LEQ  reduce 59
	GRQ  reduce 59
	EQUALS  reduce 59
	DIFF  reduce 59
	EQ  reduce 59
	XOR  reduce 59
	ANDB  reduce 59
	ORB  reduce 59
	DOBLEPUNTO  reduce 59
	PUNTOCOMA  reduce 59
	NOTIN  reduce 59
	ISNOT  reduce 59
	IS  reduce 59


state 33
	factor : power .  (66)

	.  reduce 66


state 34
	power : atom .  (67)
	power : atom . POTENCIA factor  (68)

	POTENCIA  shift 68
	COMA  reduce 67
	NEWLINE  reduce 67
	AND  reduce 67
	OR  reduce 67
	IN  reduce 67
	MAS  reduce 67
	MENOS  reduce 67
	POR  reduce 67
	DIV  reduce 67
	DIVENTERA  reduce 67
	MODULO  reduce 67
	LE  reduce 67
	GR  reduce 67
	LEQ  reduce 67
	GRQ  reduce 67
	EQUALS  reduce 67
	DIFF  reduce 67
	EQ  reduce 67
	XOR  reduce 67
	ANDB  reduce 67
	ORB  reduce 67
	DOBLEPUNTO  reduce 67
	PUNTOCOMA  reduce 67
	NOTIN  reduce 67
	ISNOT  reduce 67
	IS  reduce 67


state 35
	not_test : NOT not_test .  (37)

	.  reduce 37


state 36
	while_stmt : WHILE test . DOBLEPUNTO suite  (18)

	DOBLEPUNTO  shift 69
	.  error


state 37
	if_stmt : IF test . DOBLEPUNTO suite  (14)
	if_stmt : IF test . DOBLEPUNTO suite auxif  (15)

	DOBLEPUNTO  shift 70
	.  error


state 38
	print_stmt : PRINT ">>" . auxprint  (29)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	test  goto 39
	auxprint  goto 71
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 39
	auxprint : test .  (30)

	.  reduce 30


state 40
	print_stmt : PRINT auxprint .  (28)
	auxprint : auxprint . COMA test  (31)

	COMA  shift 72
	NEWLINE  reduce 28
	PUNTOCOMA  reduce 28


state 41
	factor : MAS factor .  (64)

	.  reduce 64


state 42
	factor : MENOS factor .  (65)

	.  reduce 65


state 43
	auxsuite : auxsuite stmt .  (9)

	.  reduce 9


state 44
	expr_stmt : test EQ . test  (26)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	test  goto 73
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 45
	simple : auxsimple NEWLINE .  (20)

	.  reduce 20


state 46
	simple : auxsimple PUNTOCOMA . NEWLINE  (19)
	auxsimple : auxsimple PUNTOCOMA . small_stmt  (22)

	CADENA  shift 1
	NEWLINE  shift 74
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	PRINT  shift 8
	MAS  shift 9
	MENOS  shift 10
	.  error

	test  goto 18
	small_stmt  goto 75
	expr_stmt  goto 21
	print_stmt  goto 22
	or_test  goto 23
	and_test  goto 24
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 47
	or_test : or_test OR . and_test  (34)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	and_test  goto 76
	not_test  goto 25
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 48
	and_test : and_test AND . not_test  (36)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	NOT  shift 5
	MAS  shift 9
	MENOS  shift 10
	.  error

	not_test  goto 77
	comparison  goto 26
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 49
	comparison : expr IN . comparison  (46)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 78
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 50
	comparison : expr LE . comparison  (40)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 79
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 51
	comparison : expr GR . comparison  (41)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 80
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 52
	comparison : expr LEQ . comparison  (44)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 81
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 53
	comparison : expr GRQ . comparison  (43)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 82
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 54
	comparison : expr EQUALS . comparison  (42)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 83
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 55
	comparison : expr DIFF . comparison  (45)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 84
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 56
	expr : expr ORB . xor_expr  (51)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	xor_expr  goto 85
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 57
	comparison : expr NOTIN . comparison  (47)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 86
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 58
	comparison : expr ISNOT . comparison  (49)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 87
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 59
	comparison : expr IS . comparison  (48)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error

	comparison  goto 88
	expr  goto 27
	xor_expr  goto 28
	and_expr  goto 29
	arith_expr  goto 30
	term  goto 31
	factor  goto 32
	power  goto 33
	atom  goto 34


state 60
	xor_expr : xor_expr XOR . and_expr  (53)

	CADENA  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	MAS  shift 9
	MENOS  shift 10
	.  error
